# jax-ground-truth-corpus

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  ty.toml
src/jax_gtc/: __init__.py
src/jax_gtc/arrays/: __init__.py  operations.py
src/jax_gtc/autodiff/: __init__.py  derivatives.py
src/jax_gtc/distributed/: __init__.py  parallel.py
src/jax_gtc/neural/: __init__.py  layers.py
src/jax_gtc/random/: __init__.py  prng.py
src/jax_gtc/training/: __init__.py  optimizers.py
src/jax_gtc/transforms/: __init__.py  core.py
tests/: test_arrays.py  test_autodiff.py  test_distributed.py  test_neural.py  test_random.py  test_training.py  test_transforms.py
