[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jax-ground-truth-corpus"
version = "0.1.0"
description = "Production-ready JAX recipes for PAIML Sovereign AI Stack Oracle RAG"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jax_gtc"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D203", "D213"]  # Use D211 (no-blank-line-before-class) and D212 (multi-line-summary-first-line)

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "N806"]  # No docstrings required, allow math conventions (J, H, A)

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
# JAX type stubs are incomplete
disable_error_code = ["no-any-return", "type-arg", "no-untyped-call"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=jax_gtc --cov-report=term-missing --doctest-modules"
